--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,17 +9,12 @@
 
     <TextView
         android:id="@+id/main_tw1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/twStyle"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:drawableStart="@drawable/world"
-        android:drawablePadding="8dp"
-        android:fontFamily="sans-serif-medium"
         android:text="@string/main_country"
-        android:textColor="#666664"
-        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,16 +58,11 @@
 
         <TextView
             android:id="@+id/main_tw2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/twStyle"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="128dp"
             android:drawableStart="@drawable/flag"
-            android:drawablePadding="8dp"
-            android:fontFamily="sans-serif-medium"
             android:text="@string/main_flag"
-            android:textColor="#666664"
-            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
