--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,102 +6,67 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     tools:ignore="MissingDefaultResource">
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnCount="5"
+        android:rowCount="3">
 
-    <TextView
-        android:id="@+id/main_tw1"
-        style="@style/twStyle"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:drawableStart="@drawable/world"
-        android:text="@string/main_country"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/main_te1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:ems="16"
-        android:hint="Введи страну"
-        android:inputType="textCapWords"
-        app:layout_constraintStart_toStartOf="@+id/main_tw1"
-        app:layout_constraintTop_toBottomOf="@+id/main_tw1" />
-
-
-    <Button
-        android:id="@+id/btn_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/color_btn_disabled"
-        android:enabled="false"
-        android:text="ПОКАЗАТЬ"
-        android:textColor="@color/color_btn_main"
-        app:layout_constraintEnd_toEndOf="@id/main_te1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_te1"
-        tools:layout_editor_absoluteY="125dp" />
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/main_tw1"
-        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:id="@+id/main_tw1"
+            style="@style/twStyle"
+            android:layout_columnSpan="2"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:drawableStart="@drawable/world"
+            android:text="@string/main_country" />
 
         <TextView
             android:id="@+id/main_tw2"
             style="@style/twStyle"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="128dp"
+            android:layout_columnSpan="3"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:drawableStart="@drawable/flag"
-            android:text="@string/main_flag"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/main_flag" />
+
+        <EditText
+            android:id="@+id/main_te1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnSpan="2"
+            android:layout_marginTop="16dp"
+            android:ems="16"
+            android:hint="Введи страну"
+            android:inputType="textCapWords" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_rowSpan="2"
+            android:layout_columnSpan="3"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:background="@color/color_black_border"
+            android:scaleType="centerCrop"
+            android:src="@drawable/flag_grey_big" />
+
+        <Button
+            android:id="@+id/btn_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnSpan="2"
+            android:layout_gravity="center_horizontal"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/color_balck_border"
-            android:scaleType="centerInside"
-            android:src="@drawable/flag_grey_big"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_tw2" />
-    </LinearLayout>
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
-
-
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/btn_color_2"
+            android:enabled="false"
+            android:text="ПОКАЗАТЬ"
+            android:textColor="@color/color_btn_main" />
+    </GridLayout>
 </android.support.constraint.ConstraintLayout>
