--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="color_btn_main">#FFFFFF</color>
     <color name="color_btn_disabled">#C2C2C2</color>
-    <color name="color_balck_border">#0DC2C2C2</color>
+    <color name="color_black_border">#0DC2C2C2</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorStartGrad">#970037FF</color>
     <color name="colorEndGrad">#7CAA00FF</color>
     <color name="colorAccent">#FF6D00</color>
     <color name="text_color">#666664</color>
+    <color name="app_icon_background">#FFC107</color>
 </resources>
