--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,33 +6,29 @@
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-
     <TextView
         android:id="@+id/textView"
-        android:layout_margin="@dimen/small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/small"
         android:layout_marginStart="8dp"
         android:text="@string/tw_ru1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-
-
     <ImageView
         android:id="@+id/imageView2"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ru1" />
-
+        app:srcCompat="@drawable/ru1"
+        />
 
 </android.support.constraint.ConstraintLayout>
